# StreamLang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sandbox.stream  setup.py  what i have done so far.md
docs/: ARCHITECTURE.md  LANGUAGE_GUIDE.md  QUICK_START.md
docs/future_ideas/: Async_Event_Loop.md  LSP_Extension.md  Native_HTTP_Client.md
docs/v1_specifications/: 01_V1_Scope.md  02_Language_Syntax.md  03_Std_Lib.md  04_Architecture.md
examples/: factorial.stream  logic.stream  pipeline.stream
grammar/: StreamLang.g4
src/streamlang/: main.py
src/streamlang/ast/: builder.py  nodes.py
src/streamlang/interpreter/: interpreter.py
src/streamlang/parser/: StreamLang.interp  StreamLangLexer.interp  StreamLangLexer.py  StreamLangLexer.tokens  StreamLangListener.py  StreamLangParser.py  StreamLangVisitor.py
src/streamlang/typechecker/: checker.py  symbols.py
streamlang/parser/: StreamLangVisitor.py
tests/: test_errors.py  test_runner.py
tests/e2e/: 01_math.stream  02_recursion.stream  03_logic.stream  04_precedence.stream  05_negative.stream  06_strings.stream  07_nested_logic.stream  08_unary_not.stream  09_comparisons.stream  10_boolean_logic.stream  11_math_div_mod.stream  12_pipe_chain.stream  13_shadowing.stream
tests/e2e/basics/: assignment.stream  boolean_logic.stream  comparisons.stream  math.stream  math_div_mod.stream  negative.stream  precedence.stream  (+3 more)
tests/errors/: 02_undefined_var.stream
tests/unit/: test_builder.py  test_checker_logic.py  test_environment.py  test_interpreter_logic.py  test_lexer.py  test_symbols.py
(+42 files in other folders)
